--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/matheus-freitas-ds/projeto12-tweteroo/issues"
   },
-  "homepage": "https://github.com/matheus-freitas-ds/projeto12-tweteroo#readme"
+  "homepage": "https://github.com/matheus-freitas-ds/projeto12-tweteroo#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  }
 }
